Remove non-standard encodings (e.g., 'x-mac-turkish', 'x-mac-greek' etc.)

https://bugs.webkit.org/show_bug.cgi?id=265261
rdar://problem/118944539

Reviewed by Alex Christensen.

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium by removing following
non-standard encodings:

- x-mac-ce
- x-mac-centraleurroman
- x-mac-turkish
- x-mac-greek
- euc-tw
- windows-936-2000

* Source/WebCore/PAL/pal/text/TextCodecCJK.cpp:
(TextCodecCJK::registerEncodingNames):
* Source/WebCore/PAL/pal/text/TextCodecICU.cpp:
(DECLARE_ALIASES):
(EncodingName):
* LayoutTests/imported/w3c/web-platform-tests/encoding/unsupported-labels-expected.txt: Rebaselined
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/encoding/unsupported-labels-expected.txt: Rebaselined
* LayoutTests/fast/encoding/char-decoding-mac.html: Rebaselined
* LayoutTests/fast/encoding/char-decoding-mac-expected.txt: Rebaselined
* LayoutTests/fast/encoding/legacy-tec-encodings.html: Rebaselined
* LayoutTests/fast/encoding/legacy-tec-encodings-expected.txt: Rebaselined
* LayoutTests/fast/encoding/char-encoding-mac.html: Rebaselined
* LayoutTests/fast/encoding/char-encoding-mac-expected.txt: Rebaselined
* LayoutTests/fast/encoding/legacy-ios-encodings.html: Rebaselined
* LayoutTests/fast/encoding/legacy-ios-encodings-expected.txt: Rebaselined

Canonical link: https://commits.webkit.org/275797@main